# lab04

./: .gitlab-ci.yml  CMakeLists.txt  README.md
.github/workflows/: .gitlab-ci.yml  build.yml  cmake.yml
